--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
 	"name": "changelog-updater",
 	"version": "0.1.0",
 	"description": "Update [Unreleased] in CHANGELOG.md to current package version.",
-	"main": "index.js",
+	"main": "lib/index.js",
 	"bin": {
 		"changelog-updater": "./bin/changelog-updater.js"
 	},
 	"scripts": {
 		"start": "npm run changelog-updater",
 		"changelog-updater": "node ./bin/changelog-updater.js",
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "jest",
 		"prettier": "prettier --write '**/*.js'",
 		"version": "npm run changelog-updater && git add ./CHANGELOG.md"
 	},
@@ -17,6 +17,7 @@
 	"license": "MIT",
 	"dependencies": {},
 	"devDependencies": {
+		"jest": "^21.2.1",
 		"prettier": "^1.9.1"
 	}
 }
