--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
 		"start": "npm run changelog-updater",
 		"changelog-updater": "node ./bin/changelog-updater.js",
 		"test": "jest",
+		"test:watch": "npm test -- --watch",
+		"test:coverage": "npm test -- --coverage",
+		"test:coveralls": "npm run test:coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
 		"prettier": "prettier --write '**/*.js'",
 		"version": "npm run changelog-updater && git add ./CHANGELOG.md"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/nikolajevp/changelog-updater.git"
 	},
 	"author": "Pavel Nikolajev",
 	"license": "MIT",
 	"dependencies": {},
 	"devDependencies": {
+		"coveralls": "^3.0.0",
 		"jest": "^21.2.1",
 		"prettier": "^1.9.1"
 	}
